--- a/massiv-bench/massiv-bench.cabal
+++ b/massiv-bench/massiv-bench.cabal
@@ -134,6 +134,20 @@ benchmark index
   build-depends:       base
                      , criterion
                      , massiv
+  default-language:    Haskell2010
+
+benchmark accelerate
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      bench
+  main-is:             Accelerate.hs
+  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N7
+  build-depends:       base
+                     , accelerate
+                     , accelerate-llvm-native
+                     , repa
+                     , criterion
+                     , massiv
+                     , massiv-bench
                      , repa
   default-language:    Haskell2010
 
