--- a/massiv/massiv.cabal
+++ b/massiv/massiv.cabal
@@ -53,6 +53,7 @@ library
   build-depends:       base            >= 4.8 && < 5
                      , data-default-class
                      , deepseq
+                     , say
                      , ghc-prim
                      , primitive
                      , vector
