--- a/massiv-bench/massiv-bench.cabal
+++ b/massiv-bench/massiv-bench.cabal
@@ -140,15 +140,15 @@ benchmark accelerate
   type:                exitcode-stdio-1.0
   hs-source-dirs:      bench
   main-is:             Accelerate.hs
-  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N7
+  ghc-options:         -threaded -O2 -with-rtsopts=-N7
   build-depends:       base
                      , accelerate
                      , accelerate-llvm-native
                      , repa
+                     , deepseq
                      , criterion
-                     , massiv
-                     , massiv-bench
-                     , repa
+                     -- , massiv
+                     -- , massiv-bench
   default-language:    Haskell2010
 
 -- benchmark compute-par
