--- a/massiv-bench/stack-ghc-8.2.yaml
+++ b/massiv-bench/stack-ghc-8.2.yaml
@@ -2,8 +2,11 @@ resolver: lts-10.0
 packages:
 - '.'
 - '../massiv/'
+- '../../deadlock-debug/'
+- '../../accelerate-llvm/accelerate-llvm/'
+- '../../accelerate-llvm/accelerate-llvm-native/'
 extra-deps:
 - repa-3.4.1.2
 - repa-algorithms-3.4.1.1
-- accelerate-llvm-native-1.1.0.1
+#- accelerate-llvm-native-1.1.0.1
 allow-newer: true
